# Cognitive_Topology-

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md
XI/: AUGMNTD_TOKEN_LAUNCH.md  RESONANCE_PROTOCOL.md  VALIDATOR_RESONANCE_GUIDE.md  XIQA_Roadmap_Agent.md
cog_topo_bridge/: Anchor.toml  Bioelectric patterns.md  Feasibility of Sierpinski-Inspired Embeddings for Multiversal Branching.md  temporal_manuscript.json
cog_topo_bridge/programs/cog_topo_bridge/: Cargo.toml
cog_topo_bridge/programs/cog_topo_bridge/src/: bundle.rs  fhp.rs  fractal.rs  kernel.rs  lib.rs  manifold.rs  simplex.rs  types.rs
docs/: AUGMNTD_PURPLEPAPER.md  GRAVITY.md  HARMONIC_VALIDATORS.md  TEMPORAL_COMPOSITION_INDEX.md  X1_AUGMNTD.md
examples/: thicc_now.rs
harmonic_viber/: index.html  package-lock.json  package.json  tailwind.config.js
idl/: resonance_protocol.json
programs/resonance_protocol/: Cargo.toml  program-id.json
programs/resonance_protocol/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs  state.rs
programs/resonance_protocol/src/instructions/: claim_emissions.rs  decohere.rs  enter_field.rs  initialize_field.rs  mod.rs  phase_couple.rs  transition_vibe_state.rs  uncouple.rs  update_field.rs  update_resonator_phase.rs
scripts/: claim_emissions.ts  crank_resonators.ts  decohere.ts  enter_field.ts  initialize_field.ts  package-lock.json  package.json  phase_couple.ts  uncouple.ts  update_field.ts
src/: bundle.rs  fhp.rs  gravity.rs  kernel.rs  lib.rs  manifold.rs  simplex.rs  types.rs
tests/: bridge.rs
token/: METADATA_GUIDE.md  create_metadata.sh  (+3 more)
(+17 files in other folders)
